# emos

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile  rustfmt.toml
.cargo/: config.toml
.github/actions/task/: action.yml
.github/actions/upload/: action.yml
.github/workflows/: ci.yml  main.yml  run_task.yml  tmdb_scifi.yml  upload-r2.yml  weekly_cover_generator.yml
.sqlx/: query-2b99c262423ca61e6d05e59f742dd65877bb9db4af239630605e7472125afb66.json  query-95152f6bbd3f9a3bfa128d7463e0d290889884a600ced8ca8c791bad5481a839.json  query-ce358599fe83f82631e9d7d3deeb8f811c666c675caec9f94319b066f9d7f1cb.json
core/: Cargo.toml
core/src/: main.rs  sync_video_list.rs  watch_basic_genere.rs  watch_basic_genre.rs
core/src/task/: mod.rs  sync_video_list.rs  tmdb_download_cover.rs  tmdb_scifi_media.rs  watch_basic_genre.rs  watch_foreign_tv.rs  watch_hot_and_persistent.rs  watch_hot_video.rs
crates/bangumi-api/: Cargo.toml
crates/bangumi-api/src/: lib.rs
crates/bangumi_api/: Cargo.toml
crates/bangumi_api/src/: lib.rs
crates/cache/: Cargo.toml  README.md
crates/cache/src/: blocking.rs  error.rs  kv.rs  lib.rs
crates/dao/: Cargo.toml  build.rs
crates/dao/migrations/: 20260126200000_normalize_genres.sql  20260219000000_normalize_genres.sql
crates/dao/src/: lib.rs  video.rs
crates/douban/: Cargo.toml  README.md
crates/douban/src/: lib.rs
crates/douban_api/: Cargo.toml
crates/douban_api/src/: lib.rs
crates/douban_api/src/model/: interests.rs  mod.rs  top_list.rs
crates/emos_api/: Cargo.toml
crates/emos_api/src/: lib.rs  watch.rs
crates/emos_api/src/video/: list.rs
crates/emos_api/src/watch/: dynamic.rs  mod.rs
crates/task_macro/: Cargo.toml
crates/task_macro/src/: lib.rs
crates/tmdb_api/: Cargo.toml
crates/tmdb_api/src/: lib.rs  model.rs  tv_details.rs
crates/utils/: Cargo.toml
crates/utils/src/: fs.rs  lib.rs  math.rs
crates/video_db/: Cargo.toml
crates/video_db/migrations/: 20260126194741_init_videos.sql
crates/video_db/src/: lib.rs
data/: watch_hot_and_persistent.json
data/cache/: simple_cache.mpbr
lib/cover_generator/: .gitignore  Justfile  README.md  main.py  pyproject.toml
lib/cover_generator/styles/: badge_drawer.py  style_multi_1.py  style_single_1.py  style_single_2.py
xtask/: Cargo.toml
xtask/src/: dist.rs  main.rs
