[workspace]
members = ["xtask"]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = ""
repository = ""
readme = "README.md"
license = "MIT"

[workspace.lints.rust]
unknown_lints = "deny"
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
too_many_arguments = "allow"
