[workspace]
members = ["core", "crates/douban", "crates/emos_api", "crates/dao", "xtask"]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://github.com/bxb100/emos"
repository = "https://github.com/bxb100/emos"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
# memebers
emos_api = { path = "crates/emos_api" }
douban_api = { path = "crates/douban" }
dao = { path = "crates/dao" }

# others
reqwest = { version = "0.13", features = ["json", "cookies", "query", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16"
serde_path_to_error = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
url = "2.4"
urlencoding = "2.1"
anyhow = "1.0"
rand = "0"
once_cell = "1"
dotenv = "0.15"
dotenv_codegen = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "macros",
  "uuid",
  "sqlite",
  "migrate",
  "json",
] }

async-stream = "0"
futures-util = "0"

[workspace.lints.rust]
unknown_lints = "deny"
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
too_many_arguments = "allow"
