[workspace]
members = ["crates/*", "xtask", "core"]
resolver = "3"
default-members = ["core"]

[workspace.package]
edition = "2024"
homepage = "https://github.com/bxb100/emos"
repository = "https://github.com/bxb100/emos"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
# memebers
emos_api = { path = "crates/emos_api" }
emos_douban_api = { path = "crates/douban_api" }
emos_bangumi_api = { path = "crates/bangumi_api" }
emos_tmdb_api = { path = "crates/tmdb_api" }
emos_dao = { path = "crates/dao" }
emos_utils = { path = "crates/utils" }
emos_cache = { path = "crates/cache" }

# others
reqwest = { version = "0.13", features = ["json", "cookies", "query", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16"
serde_path_to_error = "0.1"
serde_repr = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
chrono-tz = "0.10.4"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
url = "2.4"
urlencoding = "2.1"
anyhow = "1.0"
rand = "0.10"
once_cell = "1"
dotenv = "0.15"
dotenv_codegen = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "macros",
  "uuid",
  "sqlite",
  "migrate",
  "json",
] }
clap = { version = "4.5", features = ["derive"] }
async-stream = "0"
futures-util = "0"

[workspace.lints.rust]
unknown_lints = "deny"
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
too_many_arguments = "allow"
