[package]
name = "core"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
dao.workspace = true
emos_api.workspace = true
douban_api.workspace = true
tmdb_api.workspace = true

tokio.workspace = true
futures-util.workspace = true
async-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
inventory = "0.3"
regex = "1"

[dev-dependencies]
douban_api = { workspace = true, features = ["test-verbose"] }

[lints]
workspace = true
