[package]
name = "emos"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
emos_dao.workspace = true
emos_api.workspace = true
emos_douban_api.workspace = true
emos_tmdb_api.workspace = true
emos_cache.workspace = true
emos_utils.workspace = true

tokio.workspace = true
futures-util.workspace = true
async-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
inventory = "0.3"
regex = "1"
serde.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
serde_json.workspace = true

[dev-dependencies]
emos_douban_api = { workspace = true, features = ["test-verbose"] }

[lints]
workspace = true
