[package]
name = "core"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "emos"
path = "src/main.rs"

[dependencies]
emos_dao.workspace = true
emos_api.workspace = true
douban_api.workspace = true
tmdb_api.workspace = true
cache.workspace = true
utils.workspace = true
task_macro.workspace = true

tokio.workspace = true
futures-util.workspace = true
async-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
inventory = "0.3"
regex = "1"
serde.workspace = true
rand.workspace = true

[dev-dependencies]
douban_api = { workspace = true, features = ["test-verbose"] }

[lints]
workspace = true
