[package]
name = "bangumi_api"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
utils.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_repr.workspace = true
dotenv_codegen.workspace = true

[dev-dependencies]
utils = { workspace = true, features = ["test-verbose"] }

[lints]
workspace = true
