[package]
name = "emos_cache"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
foyer.workspace = true
emos_utils.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
