[package]
name = "dao"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
emos_api.workspace = true
utils.workspace = true

sqlx.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
async-stream.workspace = true
futures-util.workspace = true
serde.workspace = true

[lints]
workspace = true
