[package]
name = "douban_api"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
utils.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
base64.workspace = true
hmac.workspace = true
sha1.workspace = true
urlencoding.workspace = true
anyhow.workspace = true
rand.workspace = true
once_cell.workspace = true

[dev-dependencies]
utils = { workspace = true, features = ["test-verbose"] }

[lints]
workspace = true
