[package]
name = "emos_api"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
dotenv_codegen.workspace = true
serde_with.workspace = true
tracing.workspace = true

serde_path_to_error = { workspace = true, optional = true }

[features]
test-verbose = ["dep:serde_path_to_error"]

[dev-dependencies]
serde_path_to_error.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
