[package]
name = "emos_api"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
emos_utils.workspace = true

serde.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
dotenv_codegen.workspace = true
serde_with.workspace = true
tracing.workspace = true
chrono.workspace = true
chrono-tz.workspace = true

[dev-dependencies]
emos_utils = { workspace = true, features = ["test-verbose"] }
tracing-subscriber.workspace = true
serde_json.workspace = true

[lints]
workspace = true
