[package]
name = "tmdb_api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
utils.workspace = true
serde_derive = "1.0.228"
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true }
utils = { workspace = true, features = ["test-verbose"] }
