[package]
name = "emos_utils"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_path_to_error = { workspace = true, optional = true }

[features]
default = []
test-verbose = ["dep:serde_path_to_error", "dep:serde_json"]

[dev-dependencies]
serde_json.workspace = true
serde_path_to_error.workspace = true

[lints]
workspace = true
